2006-08-22  Laurent Sansonetti  <lsansonetti@apple.com>

	* AUTHORS:
	Added.

2006-08-10  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb:
	Fix latest fix.

	* src/rbosa.c:
	Removed unnecessary comment.    

2006-08-08  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb:
	Cache the application objects so that we never create them more than once.

	* src/rbosa_sdef.c:
	Fixed the OSA.app_with_signature() method.

	* tests/tc_get_app.rb, tests/testall.rb:
	Added some test cases.

	* src/rbosa_conv.c:
	Raise an exception if an URL could not be created with the given file
	path (reported by Michael Pruett).

2006-07-26  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/rbosa.c, src/rbosa_sdef.c, src/lib/rbosa.rb:
	- The application class does not inherit from OSA::Application anymore,
	  as in some sdef it inherits from another class. OSA::Application has
	  been transformed as a module and is mixed in the class instead ;
	- Fixed the sdef retrieval method to generate a Ruby string with the
	  exact length of the given data, to avoid garbage at the end of the XML
	  definition that can sometimes make REXML a bit nervous.

2006-07-23  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb:
	- Map direct-specifier-optional commands to the application class ;
    - Do not override methods if they are already defined.

    * sample/iTunes_fade_volume.rb:
	Fixed the iTunes_fade_volume.rb sample to call app#play ;

2006-07-19  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb, src/rbosa.c, src/rbosa.h, src/rbosa_conv.c:
	- Fixed methods with direct-parameter mapped to the application class ;
	- Do not warn for classes that inherit from themselves (not a bug) ;
	- Added support for aliases (Ruby String -> Carbon AliasHandle) ;
	- Fixed integers-packed-into-string arguments handling ;
	- Handle 'text' element types as strings.

	* sample/iTunes_fade_volume.rb:
	New sample.
